--- a/hugo.toml
+++ b/hugo.toml
@@ -169,3 +169,7 @@ pagination.pagerSize = 5
   # replacements = "github.com/panr/hugo-theme-terminal/v4 -> themes/terminal"
 [[module.imports]]
   #path = 'github.com/panr/hugo-theme-terminal/v4'
+  
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
